@@ -27,6 +27,8 @@ final class SystemJvmOptions {
              * networkaddress.cache.negative ttl; set to -1 to cache forever.
              */
             "-Des.networkaddress.cache.negative.ttl=10",
+            // Allow to set the security manager.
+            "-Djava.security.manager=allow",
             // pre-touch JVM emory pages during initialization
             "-XX:+AlwaysPreTouch",
             // explicitly set the stack size
@@ -52,6 +54,7 @@ final class SystemJvmOptions {
             // log4j 2
             "-Dlog4j.shutdownHookEnabled=false",
             "-Dlog4j2.disable.jmx=true",
+            "-Dlog4j2.formatMsgNoLookups=true",
             /*
              * Due to internationalization enhancements in JDK 9 Elasticsearch need to set the provider to COMPAT otherwise time/date
              * parsing will break in an incompatible way for some date patterns and locales.
